--- a/src/index.html
+++ b/src/index.html
@@ -244,7 +244,7 @@
                 />
               </div>
               <div class="category-item__button">
-                <p>Laptos</p>
+                <p>Laptops</p>
                 <button>Ver categoría</button>
               </div>
             </div>
@@ -256,7 +256,7 @@
                 />
               </div>
               <div class="category-item__button">
-                <p>Laptos</p>
+                <p>Laptops</p>
                 <button>Ver categoría</button>
               </div>
             </div>
@@ -268,7 +268,7 @@
                 />
               </div>
               <div class="category-item__button">
-                <p>Laptos</p>
+                <p>Laptops</p>
                 <button>Ver categoría</button>
               </div>
             </div>
@@ -280,7 +280,7 @@
                 />
               </div>
               <div class="category-item__button">
-                <p>Laptos</p>
+                <p>Laptops</p>
                 <button>Ver categoría</button>
               </div>
             </div>
@@ -292,7 +292,7 @@
                 />
               </div>
               <div class="category-item__button">
-                <p>Laptos</p>
+                <p>Laptops</p>
                 <button>Ver categoría</button>
               </div>
             </div>
@@ -304,7 +304,7 @@
                 />
               </div>
               <div class="category-item__button">
-                <p>Laptos</p>
+                <p>Laptops</p>
                 <button>Ver categoría</button>
               </div>
             </div>
