--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
       href="./styles/desktop.css"
       media="(min-width: 1024px)"
     />
-    <title>Ecomerce - test Enova</title>
+    <title>E-commerce | test Enova</title>
   </head>
   <body>
     <header></header>
